[package]
authors = ["Kevin Hernandez-Rives <rurunosep@gmail.com>"]
edition = "2021"
name = "maplewood"
version = "0.2.1"

[dependencies]
anymap = "0.12.1"
bytemuck = {version = "1.20.0", features = ["derive"]}
colored = "2.1.0"
crossbeam = "0.8.4"
derivative = "2.2.0"
derive_more = {version = "1.0.0", features = ["deref", "deref_mut"]}
euclid = {version = "0.22.9", features = ["serde"]}
image = "0.25.5"
itertools = "0.13.0"
log = {version = "0.4.22", features = ["std", "kv"]}
mlua = {version = "0.10.2", features = ["lua54", "vendored"]}
pollster = "0.4.0"
sdl2 = {version = "0.37.0", features = ["image", "ttf", "mixer", "raw-window-handle", "unsafe_textures"]}
serde = {version = "1.0.215", features = ["derive"]}
serde_json = {version = "1.0.133", features = ["preserve_order"]}
slotmap = {version = "1.0.7", features = ["serde"]}
tap = "1.0.1"
wgpu = "23.0.1"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3.9", features = ["winuser"]}
