[package]
authors = ["Kevin Hernandez-Rives <rurunosep@gmail.com>"]
edition = "2024"
name = "maplewood"
version = "0.3.0"

[dependencies]
anyhow = "1.0.100"
anymap = "0.12.1"
bytemuck = "1.20.0"
colored = "3.0.0"
derived-deref = "2.1.0"
egui = "0.32.3"
egui-sdl2-event = "1.32.3"
egui_wgpu_backend = "0.35.0"
evalexpr = "12.0.2"
image = {version = "0.25.8", default-features = false, features = ["png", "rayon"]}
itertools = "0.14.0"
log = {version = "0.4.22", features = ["std", "kv"]}
mlua = {version = "0.11.4", features = ["lua54", "vendored"]}
pollster = "0.4.0"
regex = {version = "1.12.1", features = ["std"], default-features = false}
sdl2 = {version = "0.38.0", features = ["mixer", "raw-window-handle"]}
serde = {version = "1.0.228", features = ["derive"]}
serde_json = {version = "1.0.145", features = ["preserve_order"]}
slotmap = {version = "1.0.7", features = ["serde"]}
smart-default = "0.7.1"
tap = "1.0.1"
wgpu = "26.0.1"
wgpu_text = "26.0.0"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3.9", features = ["winuser"]}

[profile.dev.package]
fdeflate.opt-level = 3
image.opt-level = 3
png.opt-level = 3

[lints.clippy]
module_inception = "allow"
new_without_default = "allow"
redundant_closure = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
# unwrap_used = "warn"
